name:                bogosorths
version:             0.1.0.0
author:              Kishan Patel
maintainer:          bishan.batel@protonmail.com
copyright:           2022 Kishan
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bogosorths
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
